--- a/.github/workflows/Compressor.yml
+++ b/.github/workflows/Compressor.yml
@@ -29,12 +29,12 @@ jobs:
        - name: cloning repo
          continue-on-error: true
          run: |
-           git clone -b main https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com/krispychip1/krispwf
+           git clone -b main https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com/FreeGuy01/ksksjaenc
        - name: Running PrivateEncoderV2.0 Bot 
          timeout-minutes: 350
          continue-on-error: true
          run: |
-           cd krispwf
+           cd ksksjaenc
            docker build -t compressor . && docker run compressor
            
        - name: Loop workflow
